Support bigint counters and signed base64 saves
